--- a/tasks/config_tftp.yml
+++ b/tasks/config_tftp.yml
@@ -135,3 +135,4 @@
 - name: config_tftp | configuring apache2
   file: src={{ tftpboot_dir }}/{{ item }} dest={{ apache_root }}/{{ item }} owner=www-data group=www-data state=link
   with_items: apache_tftp_links
+  when: tftp_build_images is defined and tftp_build_images
