--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,10 +9,11 @@ enable_apt_caching: false  #defines if apt-cacher-ng is setup and added to prese
 netboot_url: http://archive.ubuntu.com/ubuntu/dists/trusty-updates/main/installer-amd64/current/images/netboot/
 netboot_file: netboot.tar.gz
 # To generate passwords use (replace P@55w0rd with new password).... echo "P@55w0rd" | mkpasswd -s -m sha-512
+pri_domain_name: example.org  #define here or globally in group_vars/all
 sync_tftp: false  #defines if setting up multiple servers are to be configured for GlusterFS
-root_password:  #define root password for hosts....define here or in group_vars/all
+root_password: [] #define root password for hosts....define here or in group_vars/all
 tftp_bind_address: '{{ ansible_default_ipv4.address }}'
-tftp_boot_menu:
+tftp_boot_menu: []
 #  - label: install
 #    menu_label: Install
 #    menu_default: false
