--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 apache_root: /var/www/html
 apache_tftp_links:
   - images
+apt_cacher_server: '{{ ansible_hostname }}'
 config_tftp: true  #defines if tftp services should be configured
 domain_name: '{{ pri_domain_name }}'
 enable_apt_caching: false  #defines if apt-cacher-ng is setup and added to preseed.cfg
