fixing downloading of non existing isos

--- a/tasks/build_images.yml
+++ b/tasks/build_images.yml
@@ -7,15 +7,15 @@
   file: path={{ tftpboot_dir }}/images state=directory
   when: not tftpboot_images_dir.stat.exists
 
-- name: build_images | checking for existing isos
-  stat: path={{ tftpboot_dir }}/images/{{ item.file }}
-  register: iso_files
-  with_items: tftp_iso_images
+#- name: build_images | checking for existing isos
+#  stat: path={{ tftpboot_dir }}/images/{{ item.file }}
+#  register: iso_files
+#  with_items: tftp_iso_images
 
 - name: build_images | downloading isos
-  get_url: url={{ item.url }}/{{ item.file }} dest={{ tftpboot_dir }}/images/{{ item.file }}
+  get_url: url={{ item.url }}/{{ item.file }} dest={{ tftpboot_dir }}/images/{{ item.file }} force=no
   with_items: tftp_iso_images
-  when: not iso_files.results[0].stat.exists
+#  when: not iso_files.results[0].stat.exists
 
 - name: build_images | creating tftp_images_folders
   file: path={{ tftpboot_dir }}/images/{{ item }} state=directory
