--- a/tasks/build_images.yml
+++ b/tasks/build_images.yml
@@ -1,13 +1,13 @@
 ---
-- name: build_images | checking if images folder exists
-  stat: path={{ tftpboot_dir }}/{{ item }}
-  register: tftpboot_images_dir
-  with_items: apache_tftp_links
+#- name: build_images | checking if images folder exists
+#  stat: path={{ tftpboot_dir }}/{{ item }}
+#  register: tftpboot_images_dir
+#  with_items: apache_tftp_links
 
 - name: build_images | creating images folder if it does not exist
   file: path={{ tftpboot_dir }}/{{ item }} state=directory
   with_items: apache_tftp_links
-  when: not tftpboot_images_dir.stat.exists
+#  when: not tftpboot_images_dir.stat.exists
 
 - name: build_images | downloading isos
   get_url: url={{ item.url }}/{{ item.file }} dest={{ tftpboot_dir }}/images/{{ item.file }} force=no
