--- a/tasks/build_images.yml
+++ b/tasks/build_images.yml
@@ -1,13 +1,7 @@
 ---
-#- name: build_images | checking if images folder exists
-#  stat: path={{ tftpboot_dir }}/{{ item }}
-#  register: tftpboot_images_dir
-#  with_items: apache_tftp_links
-
 - name: build_images | creating images folder if it does not exist
   file: path={{ tftpboot_dir }}/{{ item }} state=directory
   with_items: apache_tftp_links
-#  when: not tftpboot_images_dir.stat.exists
 
 - name: build_images | downloading isos
   get_url: url={{ item.url }}/{{ item.file }} dest={{ tftpboot_dir }}/images/{{ item.file }} force=no
@@ -29,7 +23,17 @@
   mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir }}/images/{{ item.file }} fstype=iso9660 state=mounted
   with_items: tftp_iso_images
 
+- name: build_images | checking that VMware iso images exist
+  stat: path={{ tftpboot_dir }}/images/{{ item.file }}
+  register: vmware_isos
+  with_items: vmware_iso_images
+  when: vmware_iso_images is defined
+
+- name: build_images | mouting VMware iso images
+  mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir}}/images/{{ item.file }} fstype=iso9660 state=mounted
+  with_items: vmware_iso_images
+  when: vmware_iso_images is defined and vmware_isos.stat.exists 
+
 - name: build_images | configuring apache2
   file: src={{ tftpboot_dir }}/{{ item }} dest={{ apache_root }}/{{ item }} owner=www-data group=www-data state=link
   with_items: apache_tftp_links
-  when: tftp_build_images is defined and tftp_build_images
