changing when condition on register

--- a/tasks/build_images.yml
+++ b/tasks/build_images.yml
@@ -32,7 +32,7 @@
 - name: build_images | mouting VMware iso images
   mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir}}/images/{{ item.file }} fstype=iso9660 state=mounted
   with_items: vmware_iso_images
-  when: vmware_iso_images is defined and vmware_isos.stat.exists 
+  when: vmware_iso_images is defined and item.stat.exists 
 
 - name: build_images | configuring apache2
   file: src={{ tftpboot_dir }}/{{ item }} dest={{ apache_root }}/{{ item }} owner=www-data group=www-data state=link
