--- a/tasks/build_images.yml
+++ b/tasks/build_images.yml
@@ -14,10 +14,12 @@
 
 - name: build_images | unmouting iso images
   mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir }}/images/{{ item.file }} fstype=iso9660 state=unmounted
-  with_items:
-    - tftp_iso_images
-    - vmware_iso_images
-    
+  with_items: tftp_iso_images
+
+- name: build_images | unmouting VMware iso images
+  mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir }}/images/{{ item.file }} fstype=iso9660 state=unmounted
+  with_items: vmware_iso_images
+
 - name: build_images | setting tftpboot_dir folder permissions
   file: path={{ tftpboot_dir }} state=directory recurse=yes owner=nobody group=nogroup
 
