--- a/tasks/config_tftp.yml
+++ b/tasks/config_tftp.yml
@@ -111,12 +111,12 @@
   run_once: true
   when: sync_tftp
 
-- name: config_tftp | unmouting iso images
+- name: config_tftp | unmounting iso images
   mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir }}/images/{{ item.file }} fstype=iso9660 state=unmounted
   with_items: tftp_iso_images
   when: tftp_iso_images is defined
 
-- name: config_tftp | unmouting vmware iso images
+- name: config_tftp | unmounting vmware iso images
   mount: name={{ tftpboot_dir }}/images/{{ item.folder }} src={{ tftpboot_dir }}/images/{{ item.file }} fstype=iso9660 state=unmounted
   with_items: vmware_iso_images
   when: vmware_iso_images is defined
