--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,7 @@ esxi_enable_snmp: false
 esxi_enable_ssh_and_shell: false
 esxi_global_network_options:
   - bootproto: dhcp
+    create_default_portgroup: false
     interface: vmnic0
 esxi_install_disk_options: install --firstdisk --overwritevmfs  #example options are... install --firstdisk=usb --overwritevmfs --novmfsondisk ... or ... install --firstdisk --overwritevmfs
 esxi_install_vibs: false
