--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -58,7 +58,7 @@ sync_tftp: false  #defines if setting up multiple servers are to be configured f
 # To generate passwords use (replace P@55w0rd with new password).... echo "P@55w0rd" | mkpasswd -s -m sha-512
 root_password: [] #define root password for hosts....define here or in group_vars/all
 tftp_bind_address: '{{ ansible_default_ipv4.address }}'
-tftp_boot_menu:
+tftp_boot_menu:  #menu_default has been disabled to allow boot from local HD by default
 #  - label: install
 #    menu_label: Install
 #    menu_default: false
@@ -71,7 +71,7 @@ tftp_boot_menu:
 #    append: 'tasks=standard pkgsel/language-pack-patterns= pkgsel/install-language-support=false vga=788 initrd=ubuntu-installer/amd64/initrd.gz -- quiet'
   - label: 'auto-install Ubuntu Netboot (Latest)'
     menu_label: 'Automated install Ubuntu (Latest)'
-    menu_default: true
+#    menu_default: true
     kernel: ubuntu-installer/amd64/linux
     append: 'auto=true priority=critical vga=788 initrd=tftp://{{ tftp_bind_address }}/ubuntu-installer/amd64/initrd.gz locale=en_US.UTF-8 kbd-chooser/method=us netcfg/choose_interface=auto url=tftp://{{ tftp_bind_address }}/preseed.cfg'
 #  - label: 'CentOS 7 (Manual)'
