added ability to create custom partitioning in pre-seed

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -67,6 +67,37 @@ esxi_vibs:
 netboot_url: http://archive.ubuntu.com/ubuntu/dists/trusty-updates/main/installer-amd64/current/images/netboot/
 netboot_file: netboot.tar.gz
 #pri_dns: 10.0.101.11  #define primary dns server here or in group_vars/all/servers
+pre_seed_expert_recipe_partitioning: false  #defines if custom partitioning is required
+pre_seed_expert_recipe_partitions:  #define the partitions to create during pre-seed
+  - name: boot
+    mountpoint: /boot
+    bootable: true
+    filesystem: ext4
+    max_size: 1000
+    method: format
+    min_size: 500
+    priority: 50
+    use_filesystem: true
+  - name: root
+    mountpoint: /
+#    bootable: false
+    filesystem: ext4
+    max_size: 10000
+    method: format
+    min_size: 5000
+    priority: 10000
+    use_filesystem: true
+  - name: swap
+#    mountpoint:
+#    bootable: false
+    filesystem: linux-swap
+    max_size: 100%
+    method: swap
+    min_size: 100%
+    priority: 512
+#    use_filesystem: true
+pre_seed_partion_disk: /dev/sda  #defines disk to install to during pre-seed TFTP/PXE install
+pre_seed_partitioning_method: lvm   #defines partitioning method....lvm, regular or crypto
 pri_domain_name: example.org  #define here or globally in group_vars/all
 #sec_dns: 10.0.101.12  #define secondary dns server here or in group_vars/all/servers
 sync_tftp: false  #defines if setting up multiple servers are to be configured for GlusterFS
