Added boot from HD to vars
Need to be able to define a different menu default

Signed-off-by: Larry Smith Jr <mrlesmithjr@gmail.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -111,6 +111,10 @@ sync_tftp: false  #defines if setting up multiple servers are to be configured f
 root_password: [] #define root password for hosts....define here or in group_vars/all
 tftp_bind_address: '{{ ansible_default_ipv4.address }}'
 tftp_boot_menu:  #menu_default has been disabled to allow boot from local HD by default
+  - label: local
+    menu_label: '^Boot from hard drive'
+    menu_default: true
+    localboot: true
 #  - label: install
 #    menu_label: Install
 #    menu_default: false
