--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -112,6 +112,7 @@ sync_tftp: false  #defines if setting up multiple servers are to be configured f
 # To generate passwords use (replace P@55w0rd with new password).... echo "P@55w0rd" | mkpasswd -s -m sha-512
 root_password: [] #define root password for hosts....define here or in group_vars/all
 tftpboot_backup_dir: ''  #define if using GlusterFS
+tftpboot_home: ''  #define if using GlusterFS
 tftpboot_mnt: ''  #define if using GlusterFS
 tftp_bind_address: '{{ ansible_default_ipv4.address }}'
 tftp_boot_menu:  #menu_default has been disabled to allow boot from local HD by default
