--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -198,4 +198,5 @@ tftp_preseed_files:
   - ubuntu_12.04_preseed
   - ubuntu_14.04_preseed
   - ubuntu_16.04_preseed
+tftp_preseed_ntp_sync: true  #defines if system clock is synced from NTP during install
 tftp_preseed_users_encrypted_pw: true  #defines if users accounts are encrypted....this should be yes..but ensure that password under create_users is MD5 hash.
